Remove unnecessary directives