@@ -397,7 +397,6 @@
       <properties>
         <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
 	         --add-opens=java.base/java.util=ALL-UNNAMED
-	         -XX:+EnableDynamicAgentLoading
 	</argLine>
       </properties>
       <build>
@@ -463,7 +462,6 @@
       <properties>
         <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
 	         --add-opens=java.base/java.util=ALL-UNNAMED
-	         -XX:+EnableDynamicAgentLoading
 	</argLine>
       </properties>
       <build>
